// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`waterfall_helpers getWaterfall should return full waterfall 1`] = `
Object {
  "childrenByParentId": Object {
    "mySpanIdA": Array [
      Object {
        "color": "#6092C0",
        "doc": Object {
          "agent": Object {
            "name": "ruby",
            "version": "1.0.0",
          },
          "parent": Object {
            "id": "mySpanIdA",
          },
          "processor": Object {
            "event": "span",
          },
          "service": Object {
            "name": "opbeans-ruby",
          },
          "span": Object {
            "duration": Object {
              "us": 481,
            },
            "id": "mySpanIdB",
            "name": "SELECT FROM products",
            "type": "db",
          },
          "timestamp": Object {
            "us": 1549324795825633,
          },
          "trace": Object {
            "id": "myTraceId",
          },
        },
        "docType": "span",
        "duration": 481,
        "id": "mySpanIdB",
        "legendValues": Object {
          "serviceName": "opbeans-ruby",
          "spanType": "db",
        },
        "offset": 41627,
        "parent": Object {
          "color": "#6092C0",
          "doc": Object {
            "agent": Object {
              "name": "ruby",
              "version": "1.0.0",
            },
            "parent": Object {
              "id": "myTransactionId2",
            },
            "processor": Object {
              "event": "span",
            },
            "service": Object {
              "name": "opbeans-ruby",
            },
            "span": Object {
              "duration": Object {
                "us": 6161,
              },
              "id": "mySpanIdA",
              "name": "Api::ProductsController#index",
              "type": "external",
            },
            "timestamp": Object {
              "us": 1549324795824504,
            },
            "trace": Object {
              "id": "myTraceId",
            },
          },
          "docType": "span",
          "duration": 6161,
          "id": "mySpanIdA",
          "legendValues": Object {
            "serviceName": "opbeans-ruby",
            "spanType": "external",
          },
          "offset": 40498,
          "parent": Object {
            "color": "#6092C0",
            "doc": Object {
              "agent": Object {
                "name": "ruby",
                "version": "1.0.0",
              },
              "parent": Object {
                "id": "mySpanIdD",
              },
              "processor": Object {
                "event": "transaction",
              },
              "service": Object {
                "name": "opbeans-ruby",
              },
              "timestamp": Object {
                "us": 1549324795823304,
              },
              "trace": Object {
                "id": "myTraceId",
              },
              "transaction": Object {
                "duration": Object {
                  "us": 8634,
                },
                "id": "myTransactionId2",
                "name": "Api::ProductsController#index",
                "type": "request",
              },
            },
            "docType": "transaction",
            "duration": 8634,
            "id": "myTransactionId2",
            "legendValues": Object {
              "serviceName": "opbeans-ruby",
              "spanType": "",
            },
            "offset": 39298,
            "parent": Object {
              "color": "#54B399",
              "doc": Object {
                "agent": Object {
                  "name": "nodejs",
                  "version": "1.0.0",
                },
                "parent": Object {
                  "id": "myTransactionId1",
                },
                "processor": Object {
                  "event": "span",
                },
                "service": Object {
                  "name": "opbeans-node",
                },
                "span": Object {
                  "duration": Object {
                    "us": 47557,
                  },
                  "id": "mySpanIdD",
                  "name": "GET opbeans-ruby:3000/api/products",
                  "type": "external",
                },
                "timestamp": Object {
                  "us": 1549324795785760,
                },
                "trace": Object {
                  "id": "myTraceId",
                },
              },
              "docType": "span",
              "duration": 47557,
              "id": "mySpanIdD",
              "legendValues": Object {
                "serviceName": "opbeans-node",
                "spanType": "external",
              },
              "offset": 1754,
              "parent": Object {
                "color": "#54B399",
                "doc": Object {
                  "agent": Object {
                    "name": "nodejs",
                    "version": "1.0.0",
                  },
                  "processor": Object {
                    "event": "transaction",
                  },
                  "service": Object {
                    "name": "opbeans-node",
                  },
                  "timestamp": Object {
                    "us": 1549324795784006,
                  },
                  "trace": Object {
                    "id": "myTraceId",
                  },
                  "transaction": Object {
                    "duration": Object {
                      "us": 49660,
                    },
                    "id": "myTransactionId1",
                    "name": "GET /api",
                    "type": "request",
                  },
                },
                "docType": "transaction",
                "duration": 49660,
                "id": "myTransactionId1",
                "legendValues": Object {
                  "serviceName": "opbeans-node",
                  "spanType": "",
                },
                "offset": 0,
                "parent": undefined,
                "parentId": undefined,
                "skew": 0,
                "spanLinksCount": Object {
                  "linkedChildren": 0,
                  "linkedParents": 0,
                },
              },
              "parentId": "myTransactionId1",
              "skew": 0,
              "spanLinksCount": Object {
                "linkedChildren": 0,
                "linkedParents": 0,
              },
            },
            "parentId": "mySpanIdD",
            "skew": 0,
            "spanLinksCount": Object {
              "linkedChildren": 0,
              "linkedParents": 0,
            },
          },
          "parentId": "myTransactionId2",
          "skew": 0,
          "spanLinksCount": Object {
            "linkedChildren": 0,
            "linkedParents": 0,
          },
        },
        "parentId": "mySpanIdA",
        "skew": 0,
        "spanLinksCount": Object {
          "linkedChildren": 0,
          "linkedParents": 0,
        },
      },
      Object {
        "color": "#6092C0",
        "doc": Object {
          "agent": Object {
            "name": "ruby",
            "version": "1.0.0",
          },
          "parent": Object {
            "id": "mySpanIdA",
          },
          "processor": Object {
            "event": "span",
          },
          "service": Object {
            "name": "opbeans-ruby",
          },
          "span": Object {
            "duration": Object {
              "us": 532,
            },
            "id": "mySpanIdC",
            "name": "SELECT FROM product",
            "type": "db",
          },
          "timestamp": Object {
            "us": 1549324795827905,
          },
          "trace": Object {
            "id": "myTraceId",
          },
        },
        "docType": "span",
        "duration": 532,
        "id": "mySpanIdC",
        "legendValues": Object {
          "serviceName": "opbeans-ruby",
          "spanType": "db",
        },
        "offset": 43899,
        "parent": Object {
          "color": "#6092C0",
          "doc": Object {
            "agent": Object {
              "name": "ruby",
              "version": "1.0.0",
            },
            "parent": Object {
              "id": "myTransactionId2",
            },
            "processor": Object {
              "event": "span",
            },
            "service": Object {
              "name": "opbeans-ruby",
            },
            "span": Object {
              "duration": Object {
                "us": 6161,
              },
              "id": "mySpanIdA",
              "name": "Api::ProductsController#index",
              "type": "external",
            },
            "timestamp": Object {
              "us": 1549324795824504,
            },
            "trace": Object {
              "id": "myTraceId",
            },
          },
          "docType": "span",
          "duration": 6161,
          "id": "mySpanIdA",
          "legendValues": Object {
            "serviceName": "opbeans-ruby",
            "spanType": "external",
          },
          "offset": 40498,
          "parent": Object {
            "color": "#6092C0",
            "doc": Object {
              "agent": Object {
                "name": "ruby",
                "version": "1.0.0",
              },
              "parent": Object {
                "id": "mySpanIdD",
              },
              "processor": Object {
                "event": "transaction",
              },
              "service": Object {
                "name": "opbeans-ruby",
              },
              "timestamp": Object {
                "us": 1549324795823304,
              },
              "trace": Object {
                "id": "myTraceId",
              },
              "transaction": Object {
                "duration": Object {
                  "us": 8634,
                },
                "id": "myTransactionId2",
                "name": "Api::ProductsController#index",
                "type": "request",
              },
            },
            "docType": "transaction",
            "duration": 8634,
            "id": "myTransactionId2",
            "legendValues": Object {
              "serviceName": "opbeans-ruby",
              "spanType": "",
            },
            "offset": 39298,
            "parent": Object {
              "color": "#54B399",
              "doc": Object {
                "agent": Object {
                  "name": "nodejs",
                  "version": "1.0.0",
                },
                "parent": Object {
                  "id": "myTransactionId1",
                },
                "processor": Object {
                  "event": "span",
                },
                "service": Object {
                  "name": "opbeans-node",
                },
                "span": Object {
                  "duration": Object {
                    "us": 47557,
                  },
                  "id": "mySpanIdD",
                  "name": "GET opbeans-ruby:3000/api/products",
                  "type": "external",
                },
                "timestamp": Object {
                  "us": 1549324795785760,
                },
                "trace": Object {
                  "id": "myTraceId",
                },
              },
              "docType": "span",
              "duration": 47557,
              "id": "mySpanIdD",
              "legendValues": Object {
                "serviceName": "opbeans-node",
                "spanType": "external",
              },
              "offset": 1754,
              "parent": Object {
                "color": "#54B399",
                "doc": Object {
                  "agent": Object {
                    "name": "nodejs",
                    "version": "1.0.0",
                  },
                  "processor": Object {
                    "event": "transaction",
                  },
                  "service": Object {
                    "name": "opbeans-node",
                  },
                  "timestamp": Object {
                    "us": 1549324795784006,
                  },
                  "trace": Object {
                    "id": "myTraceId",
                  },
                  "transaction": Object {
                    "duration": Object {
                      "us": 49660,
                    },
                    "id": "myTransactionId1",
                    "name": "GET /api",
                    "type": "request",
                  },
                },
                "docType": "transaction",
                "duration": 49660,
                "id": "myTransactionId1",
                "legendValues": Object {
                  "serviceName": "opbeans-node",
                  "spanType": "",
                },
                "offset": 0,
                "parent": undefined,
                "parentId": undefined,
                "skew": 0,
                "spanLinksCount": Object {
                  "linkedChildren": 0,
                  "linkedParents": 0,
                },
              },
              "parentId": "myTransactionId1",
              "skew": 0,
              "spanLinksCount": Object {
                "linkedChildren": 0,
                "linkedParents": 0,
              },
            },
            "parentId": "mySpanIdD",
            "skew": 0,
            "spanLinksCount": Object {
              "linkedChildren": 0,
              "linkedParents": 0,
            },
          },
          "parentId": "myTransactionId2",
          "skew": 0,
          "spanLinksCount": Object {
            "linkedChildren": 0,
            "linkedParents": 0,
          },
        },
        "parentId": "mySpanIdA",
        "skew": 0,
        "spanLinksCount": Object {
          "linkedChildren": 0,
          "linkedParents": 0,
        },
      },
    ],
    "mySpanIdD": Array [
      Object {
        "color": "#6092C0",
        "doc": Object {
          "agent": Object {
            "name": "ruby",
            "version": "1.0.0",
          },
          "parent": Object {
            "id": "mySpanIdD",
          },
          "processor": Object {
            "event": "transaction",
          },
          "service": Object {
            "name": "opbeans-ruby",
          },
          "timestamp": Object {
            "us": 1549324795823304,
          },
          "trace": Object {
            "id": "myTraceId",
          },
          "transaction": Object {
            "duration": Object {
              "us": 8634,
            },
            "id": "myTransactionId2",
            "name": "Api::ProductsController#index",
            "type": "request",
          },
        },
        "docType": "transaction",
        "duration": 8634,
        "id": "myTransactionId2",
        "legendValues": Object {
          "serviceName": "opbeans-ruby",
          "spanType": "",
        },
        "offset": 39298,
        "parent": Object {
          "color": "#54B399",
          "doc": Object {
            "agent": Object {
              "name": "nodejs",
              "version": "1.0.0",
            },
            "parent": Object {
              "id": "myTransactionId1",
            },
            "processor": Object {
              "event": "span",
            },
            "service": Object {
              "name": "opbeans-node",
            },
            "span": Object {
              "duration": Object {
                "us": 47557,
              },
              "id": "mySpanIdD",
              "name": "GET opbeans-ruby:3000/api/products",
              "type": "external",
            },
            "timestamp": Object {
              "us": 1549324795785760,
            },
            "trace": Object {
              "id": "myTraceId",
            },
          },
          "docType": "span",
          "duration": 47557,
          "id": "mySpanIdD",
          "legendValues": Object {
            "serviceName": "opbeans-node",
            "spanType": "external",
          },
          "offset": 1754,
          "parent": Object {
            "color": "#54B399",
            "doc": Object {
              "agent": Object {
                "name": "nodejs",
                "version": "1.0.0",
              },
              "processor": Object {
                "event": "transaction",
              },
              "service": Object {
                "name": "opbeans-node",
              },
              "timestamp": Object {
                "us": 1549324795784006,
              },
              "trace": Object {
                "id": "myTraceId",
              },
              "transaction": Object {
                "duration": Object {
                  "us": 49660,
                },
                "id": "myTransactionId1",
                "name": "GET /api",
                "type": "request",
              },
            },
            "docType": "transaction",
            "duration": 49660,
            "id": "myTransactionId1",
            "legendValues": Object {
              "serviceName": "opbeans-node",
              "spanType": "",
            },
            "offset": 0,
            "parent": undefined,
            "parentId": undefined,
            "skew": 0,
            "spanLinksCount": Object {
              "linkedChildren": 0,
              "linkedParents": 0,
            },
          },
          "parentId": "myTransactionId1",
          "skew": 0,
          "spanLinksCount": Object {
            "linkedChildren": 0,
            "linkedParents": 0,
          },
        },
        "parentId": "mySpanIdD",
        "skew": 0,
        "spanLinksCount": Object {
          "linkedChildren": 0,
          "linkedParents": 0,
        },
      },
    ],
    "myTransactionId1": Array [
      Object {
        "color": "#54B399",
        "doc": Object {
          "agent": Object {
            "name": "nodejs",
            "version": "1.0.0",
          },
          "parent": Object {
            "id": "myTransactionId1",
          },
          "processor": Object {
            "event": "span",
          },
          "service": Object {
            "name": "opbeans-node",
          },
          "span": Object {
            "duration": Object {
              "us": 47557,
            },
            "id": "mySpanIdD",
            "name": "GET opbeans-ruby:3000/api/products",
            "type": "external",
          },
          "timestamp": Object {
            "us": 1549324795785760,
          },
          "trace": Object {
            "id": "myTraceId",
          },
        },
        "docType": "span",
        "duration": 47557,
        "id": "mySpanIdD",
        "legendValues": Object {
          "serviceName": "opbeans-node",
          "spanType": "external",
        },
        "offset": 1754,
        "parent": Object {
          "color": "#54B399",
          "doc": Object {
            "agent": Object {
              "name": "nodejs",
              "version": "1.0.0",
            },
            "processor": Object {
              "event": "transaction",
            },
            "service": Object {
              "name": "opbeans-node",
            },
            "timestamp": Object {
              "us": 1549324795784006,
            },
            "trace": Object {
              "id": "myTraceId",
            },
            "transaction": Object {
              "duration": Object {
                "us": 49660,
              },
              "id": "myTransactionId1",
              "name": "GET /api",
              "type": "request",
            },
          },
          "docType": "transaction",
          "duration": 49660,
          "id": "myTransactionId1",
          "legendValues": Object {
            "serviceName": "opbeans-node",
            "spanType": "",
          },
          "offset": 0,
          "parent": undefined,
          "parentId": undefined,
          "skew": 0,
          "spanLinksCount": Object {
            "linkedChildren": 0,
            "linkedParents": 0,
          },
        },
        "parentId": "myTransactionId1",
        "skew": 0,
        "spanLinksCount": Object {
          "linkedChildren": 0,
          "linkedParents": 0,
        },
      },
    ],
    "myTransactionId2": Array [
      Object {
        "color": "#6092C0",
        "doc": Object {
          "agent": Object {
            "name": "ruby",
            "version": "1.0.0",
          },
          "parent": Object {
            "id": "myTransactionId2",
          },
          "processor": Object {
            "event": "span",
          },
          "service": Object {
            "name": "opbeans-ruby",
          },
          "span": Object {
            "duration": Object {
              "us": 6161,
            },
            "id": "mySpanIdA",
            "name": "Api::ProductsController#index",
            "type": "external",
          },
          "timestamp": Object {
            "us": 1549324795824504,
          },
          "trace": Object {
            "id": "myTraceId",
          },
        },
        "docType": "span",
        "duration": 6161,
        "id": "mySpanIdA",
        "legendValues": Object {
          "serviceName": "opbeans-ruby",
          "spanType": "external",
        },
        "offset": 40498,
        "parent": Object {
          "color": "#6092C0",
          "doc": Object {
            "agent": Object {
              "name": "ruby",
              "version": "1.0.0",
            },
            "parent": Object {
              "id": "mySpanIdD",
            },
            "processor": Object {
              "event": "transaction",
            },
            "service": Object {
              "name": "opbeans-ruby",
            },
            "timestamp": Object {
              "us": 1549324795823304,
            },
            "trace": Object {
              "id": "myTraceId",
            },
            "transaction": Object {
              "duration": Object {
                "us": 8634,
              },
              "id": "myTransactionId2",
              "name": "Api::ProductsController#index",
              "type": "request",
            },
          },
          "docType": "transaction",
          "duration": 8634,
          "id": "myTransactionId2",
          "legendValues": Object {
            "serviceName": "opbeans-ruby",
            "spanType": "",
          },
          "offset": 39298,
          "parent": Object {
            "color": "#54B399",
            "doc": Object {
              "agent": Object {
                "name": "nodejs",
                "version": "1.0.0",
              },
              "parent": Object {
                "id": "myTransactionId1",
              },
              "processor": Object {
                "event": "span",
              },
              "service": Object {
                "name": "opbeans-node",
              },
              "span": Object {
                "duration": Object {
                  "us": 47557,
                },
                "id": "mySpanIdD",
                "name": "GET opbeans-ruby:3000/api/products",
                "type": "external",
              },
              "timestamp": Object {
                "us": 1549324795785760,
              },
              "trace": Object {
                "id": "myTraceId",
              },
            },
            "docType": "span",
            "duration": 47557,
            "id": "mySpanIdD",
            "legendValues": Object {
              "serviceName": "opbeans-node",
              "spanType": "external",
            },
            "offset": 1754,
            "parent": Object {
              "color": "#54B399",
              "doc": Object {
                "agent": Object {
                  "name": "nodejs",
                  "version": "1.0.0",
                },
                "processor": Object {
                  "event": "transaction",
                },
                "service": Object {
                  "name": "opbeans-node",
                },
                "timestamp": Object {
                  "us": 1549324795784006,
                },
                "trace": Object {
                  "id": "myTraceId",
                },
                "transaction": Object {
                  "duration": Object {
                    "us": 49660,
                  },
                  "id": "myTransactionId1",
                  "name": "GET /api",
                  "type": "request",
                },
              },
              "docType": "transaction",
              "duration": 49660,
              "id": "myTransactionId1",
              "legendValues": Object {
                "serviceName": "opbeans-node",
                "spanType": "",
              },
              "offset": 0,
              "parent": undefined,
              "parentId": undefined,
              "skew": 0,
              "spanLinksCount": Object {
                "linkedChildren": 0,
                "linkedParents": 0,
              },
            },
            "parentId": "myTransactionId1",
            "skew": 0,
            "spanLinksCount": Object {
              "linkedChildren": 0,
              "linkedParents": 0,
            },
          },
          "parentId": "mySpanIdD",
          "skew": 0,
          "spanLinksCount": Object {
            "linkedChildren": 0,
            "linkedParents": 0,
          },
        },
        "parentId": "myTransactionId2",
        "skew": 0,
        "spanLinksCount": Object {
          "linkedChildren": 0,
          "linkedParents": 0,
        },
      },
    ],
    "root": Array [
      Object {
        "color": "#54B399",
        "doc": Object {
          "agent": Object {
            "name": "nodejs",
            "version": "1.0.0",
          },
          "processor": Object {
            "event": "transaction",
          },
          "service": Object {
            "name": "opbeans-node",
          },
          "timestamp": Object {
            "us": 1549324795784006,
          },
          "trace": Object {
            "id": "myTraceId",
          },
          "transaction": Object {
            "duration": Object {
              "us": 49660,
            },
            "id": "myTransactionId1",
            "name": "GET /api",
            "type": "request",
          },
        },
        "docType": "transaction",
        "duration": 49660,
        "id": "myTransactionId1",
        "legendValues": Object {
          "serviceName": "opbeans-node",
          "spanType": "",
        },
        "offset": 0,
        "parent": undefined,
        "parentId": undefined,
        "skew": 0,
        "spanLinksCount": Object {
          "linkedChildren": 0,
          "linkedParents": 0,
        },
      },
    ],
  },
  "duration": 49660,
  "entryTransaction": Object {
    "agent": Object {
      "name": "nodejs",
      "version": "1.0.0",
    },
    "processor": Object {
      "event": "transaction",
    },
    "service": Object {
      "name": "opbeans-node",
    },
    "timestamp": Object {
      "us": 1549324795784006,
    },
    "trace": Object {
      "id": "myTraceId",
    },
    "transaction": Object {
      "duration": Object {
        "us": 49660,
      },
      "id": "myTransactionId1",
      "marks": Object {
        "agent": Object {
          "domComplete": 383,
          "domInteractive": 382,
          "timeToFirstByte": 14,
        },
      },
      "name": "GET /api",
      "type": "request",
    },
  },
  "entryWaterfallTransaction": Object {
    "color": "#54B399",
    "doc": Object {
      "agent": Object {
        "name": "nodejs",
        "version": "1.0.0",
      },
      "processor": Object {
        "event": "transaction",
      },
      "service": Object {
        "name": "opbeans-node",
      },
      "timestamp": Object {
        "us": 1549324795784006,
      },
      "trace": Object {
        "id": "myTraceId",
      },
      "transaction": Object {
        "duration": Object {
          "us": 49660,
        },
        "id": "myTransactionId1",
        "name": "GET /api",
        "type": "request",
      },
    },
    "docType": "transaction",
    "duration": 49660,
    "id": "myTransactionId1",
    "legendValues": Object {
      "serviceName": "opbeans-node",
      "spanType": "",
    },
    "offset": 0,
    "parent": undefined,
    "parentId": undefined,
    "skew": 0,
    "spanLinksCount": Object {
      "linkedChildren": 0,
      "linkedParents": 0,
    },
  },
  "errorCountById": Object {
    "myTransactionId1": 1,
  },
  "errorItems": Array [
    Object {
      "color": "",
      "doc": Object {
        "error": Object {
          "grouping_key": "errorGroupingKey1",
          "id": "error1",
          "log": Object {
            "message": "error message",
          },
        },
        "parent": Object {
          "id": "myTransactionId1",
        },
        "service": Object {
          "name": "opbeans-ruby",
        },
        "timestamp": Object {
          "us": 1549324795810000,
        },
        "trace": Object {
          "id": "myTraceId",
        },
        "transaction": Object {
          "id": "myTransactionId1",
        },
      },
      "docType": "error",
      "id": "error1",
      "offset": 25994,
      "parent": Object {
        "color": "#54B399",
        "doc": Object {
          "agent": Object {
            "name": "nodejs",
            "version": "1.0.0",
          },
          "processor": Object {
            "event": "transaction",
          },
          "service": Object {
            "name": "opbeans-node",
          },
          "timestamp": Object {
            "us": 1549324795784006,
          },
          "trace": Object {
            "id": "myTraceId",
          },
          "transaction": Object {
            "duration": Object {
              "us": 49660,
            },
            "id": "myTransactionId1",
            "name": "GET /api",
            "type": "request",
          },
        },
        "docType": "transaction",
        "duration": 49660,
        "id": "myTransactionId1",
        "legendValues": Object {
          "serviceName": "opbeans-node",
          "spanType": "",
        },
        "offset": 0,
        "parent": undefined,
        "parentId": undefined,
        "skew": 0,
        "spanLinksCount": Object {
          "linkedChildren": 0,
          "linkedParents": 0,
        },
      },
      "parentId": "myTransactionId1",
      "skew": 0,
    },
  ],
  "exceedsMax": false,
  "items": Array [
    Object {
      "color": "#54B399",
      "doc": Object {
        "agent": Object {
          "name": "nodejs",
          "version": "1.0.0",
        },
        "processor": Object {
          "event": "transaction",
        },
        "service": Object {
          "name": "opbeans-node",
        },
        "timestamp": Object {
          "us": 1549324795784006,
        },
        "trace": Object {
          "id": "myTraceId",
        },
        "transaction": Object {
          "duration": Object {
            "us": 49660,
          },
          "id": "myTransactionId1",
          "name": "GET /api",
          "type": "request",
        },
      },
      "docType": "transaction",
      "duration": 49660,
      "id": "myTransactionId1",
      "legendValues": Object {
        "serviceName": "opbeans-node",
        "spanType": "",
      },
      "offset": 0,
      "parent": undefined,
      "parentId": undefined,
      "skew": 0,
      "spanLinksCount": Object {
        "linkedChildren": 0,
        "linkedParents": 0,
      },
    },
    Object {
      "color": "#54B399",
      "doc": Object {
        "agent": Object {
          "name": "nodejs",
          "version": "1.0.0",
        },
        "parent": Object {
          "id": "myTransactionId1",
        },
        "processor": Object {
          "event": "span",
        },
        "service": Object {
          "name": "opbeans-node",
        },
        "span": Object {
          "duration": Object {
            "us": 47557,
          },
          "id": "mySpanIdD",
          "name": "GET opbeans-ruby:3000/api/products",
          "type": "external",
        },
        "timestamp": Object {
          "us": 1549324795785760,
        },
        "trace": Object {
          "id": "myTraceId",
        },
      },
      "docType": "span",
      "duration": 47557,
      "id": "mySpanIdD",
      "legendValues": Object {
        "serviceName": "opbeans-node",
        "spanType": "external",
      },
      "offset": 1754,
      "parent": Object {
        "color": "#54B399",
        "doc": Object {
          "agent": Object {
            "name": "nodejs",
            "version": "1.0.0",
          },
          "processor": Object {
            "event": "transaction",
          },
          "service": Object {
            "name": "opbeans-node",
          },
          "timestamp": Object {
            "us": 1549324795784006,
          },
          "trace": Object {
            "id": "myTraceId",
          },
          "transaction": Object {
            "duration": Object {
              "us": 49660,
            },
            "id": "myTransactionId1",
            "name": "GET /api",
            "type": "request",
          },
        },
        "docType": "transaction",
        "duration": 49660,
        "id": "myTransactionId1",
        "legendValues": Object {
          "serviceName": "opbeans-node",
          "spanType": "",
        },
        "offset": 0,
        "parent": undefined,
        "parentId": undefined,
        "skew": 0,
        "spanLinksCount": Object {
          "linkedChildren": 0,
          "linkedParents": 0,
        },
      },
      "parentId": "myTransactionId1",
      "skew": 0,
      "spanLinksCount": Object {
        "linkedChildren": 0,
        "linkedParents": 0,
      },
    },
    Object {
      "color": "#6092C0",
      "doc": Object {
        "agent": Object {
          "name": "ruby",
          "version": "1.0.0",
        },
        "parent": Object {
          "id": "mySpanIdD",
        },
        "processor": Object {
          "event": "transaction",
        },
        "service": Object {
          "name": "opbeans-ruby",
        },
        "timestamp": Object {
          "us": 1549324795823304,
        },
        "trace": Object {
          "id": "myTraceId",
        },
        "transaction": Object {
          "duration": Object {
            "us": 8634,
          },
          "id": "myTransactionId2",
          "name": "Api::ProductsController#index",
          "type": "request",
        },
      },
      "docType": "transaction",
      "duration": 8634,
      "id": "myTransactionId2",
      "legendValues": Object {
        "serviceName": "opbeans-ruby",
        "spanType": "",
      },
      "offset": 39298,
      "parent": Object {
        "color": "#54B399",
        "doc": Object {
          "agent": Object {
            "name": "nodejs",
            "version": "1.0.0",
          },
          "parent": Object {
            "id": "myTransactionId1",
          },
          "processor": Object {
            "event": "span",
          },
          "service": Object {
            "name": "opbeans-node",
          },
          "span": Object {
            "duration": Object {
              "us": 47557,
            },
            "id": "mySpanIdD",
            "name": "GET opbeans-ruby:3000/api/products",
            "type": "external",
          },
          "timestamp": Object {
            "us": 1549324795785760,
          },
          "trace": Object {
            "id": "myTraceId",
          },
        },
        "docType": "span",
        "duration": 47557,
        "id": "mySpanIdD",
        "legendValues": Object {
          "serviceName": "opbeans-node",
          "spanType": "external",
        },
        "offset": 1754,
        "parent": Object {
          "color": "#54B399",
          "doc": Object {
            "agent": Object {
              "name": "nodejs",
              "version": "1.0.0",
            },
            "processor": Object {
              "event": "transaction",
            },
            "service": Object {
              "name": "opbeans-node",
            },
            "timestamp": Object {
              "us": 1549324795784006,
            },
            "trace": Object {
              "id": "myTraceId",
            },
            "transaction": Object {
              "duration": Object {
                "us": 49660,
              },
              "id": "myTransactionId1",
              "name": "GET /api",
              "type": "request",
            },
          },
          "docType": "transaction",
          "duration": 49660,
          "id": "myTransactionId1",
          "legendValues": Object {
            "serviceName": "opbeans-node",
            "spanType": "",
          },
          "offset": 0,
          "parent": undefined,
          "parentId": undefined,
          "skew": 0,
          "spanLinksCount": Object {
            "linkedChildren": 0,
            "linkedParents": 0,
          },
        },
        "parentId": "myTransactionId1",
        "skew": 0,
        "spanLinksCount": Object {
          "linkedChildren": 0,
          "linkedParents": 0,
        },
      },
      "parentId": "mySpanIdD",
      "skew": 0,
      "spanLinksCount": Object {
        "linkedChildren": 0,
        "linkedParents": 0,
      },
    },
    Object {
      "color": "#6092C0",
      "doc": Object {
        "agent": Object {
          "name": "ruby",
          "version": "1.0.0",
        },
        "parent": Object {
          "id": "myTransactionId2",
        },
        "processor": Object {
          "event": "span",
        },
        "service": Object {
          "name": "opbeans-ruby",
        },
        "span": Object {
          "duration": Object {
            "us": 6161,
          },
          "id": "mySpanIdA",
          "name": "Api::ProductsController#index",
          "type": "external",
        },
        "timestamp": Object {
          "us": 1549324795824504,
        },
        "trace": Object {
          "id": "myTraceId",
        },
      },
      "docType": "span",
      "duration": 6161,
      "id": "mySpanIdA",
      "legendValues": Object {
        "serviceName": "opbeans-ruby",
        "spanType": "external",
      },
      "offset": 40498,
      "parent": Object {
        "color": "#6092C0",
        "doc": Object {
          "agent": Object {
            "name": "ruby",
            "version": "1.0.0",
          },
          "parent": Object {
            "id": "mySpanIdD",
          },
          "processor": Object {
            "event": "transaction",
          },
          "service": Object {
            "name": "opbeans-ruby",
          },
          "timestamp": Object {
            "us": 1549324795823304,
          },
          "trace": Object {
            "id": "myTraceId",
          },
          "transaction": Object {
            "duration": Object {
              "us": 8634,
            },
            "id": "myTransactionId2",
            "name": "Api::ProductsController#index",
            "type": "request",
          },
        },
        "docType": "transaction",
        "duration": 8634,
        "id": "myTransactionId2",
        "legendValues": Object {
          "serviceName": "opbeans-ruby",
          "spanType": "",
        },
        "offset": 39298,
        "parent": Object {
          "color": "#54B399",
          "doc": Object {
            "agent": Object {
              "name": "nodejs",
              "version": "1.0.0",
            },
            "parent": Object {
              "id": "myTransactionId1",
            },
            "processor": Object {
              "event": "span",
            },
            "service": Object {
              "name": "opbeans-node",
            },
            "span": Object {
              "duration": Object {
                "us": 47557,
              },
              "id": "mySpanIdD",
              "name": "GET opbeans-ruby:3000/api/products",
              "type": "external",
            },
            "timestamp": Object {
              "us": 1549324795785760,
            },
            "trace": Object {
              "id": "myTraceId",
            },
          },
          "docType": "span",
          "duration": 47557,
          "id": "mySpanIdD",
          "legendValues": Object {
            "serviceName": "opbeans-node",
            "spanType": "external",
          },
          "offset": 1754,
          "parent": Object {
            "color": "#54B399",
            "doc": Object {
              "agent": Object {
                "name": "nodejs",
                "version": "1.0.0",
              },
              "processor": Object {
                "event": "transaction",
              },
              "service": Object {
                "name": "opbeans-node",
              },
              "timestamp": Object {
                "us": 1549324795784006,
              },
              "trace": Object {
                "id": "myTraceId",
              },
              "transaction": Object {
                "duration": Object {
                  "us": 49660,
                },
                "id": "myTransactionId1",
                "name": "GET /api",
                "type": "request",
              },
            },
            "docType": "transaction",
            "duration": 49660,
            "id": "myTransactionId1",
            "legendValues": Object {
              "serviceName": "opbeans-node",
              "spanType": "",
            },
            "offset": 0,
            "parent": undefined,
            "parentId": undefined,
            "skew": 0,
            "spanLinksCount": Object {
              "linkedChildren": 0,
              "linkedParents": 0,
            },
          },
          "parentId": "myTransactionId1",
          "skew": 0,
          "spanLinksCount": Object {
            "linkedChildren": 0,
            "linkedParents": 0,
          },
        },
        "parentId": "mySpanIdD",
        "skew": 0,
        "spanLinksCount": Object {
          "linkedChildren": 0,
          "linkedParents": 0,
        },
      },
      "parentId": "myTransactionId2",
      "skew": 0,
      "spanLinksCount": Object {
        "linkedChildren": 0,
        "linkedParents": 0,
      },
    },
    Object {
      "color": "#6092C0",
      "doc": Object {
        "agent": Object {
          "name": "ruby",
          "version": "1.0.0",
        },
        "parent": Object {
          "id": "mySpanIdA",
        },
        "processor": Object {
          "event": "span",
        },
        "service": Object {
          "name": "opbeans-ruby",
        },
        "span": Object {
          "duration": Object {
            "us": 481,
          },
          "id": "mySpanIdB",
          "name": "SELECT FROM products",
          "type": "db",
        },
        "timestamp": Object {
          "us": 1549324795825633,
        },
        "trace": Object {
          "id": "myTraceId",
        },
      },
      "docType": "span",
      "duration": 481,
      "id": "mySpanIdB",
      "legendValues": Object {
        "serviceName": "opbeans-ruby",
        "spanType": "db",
      },
      "offset": 41627,
      "parent": Object {
        "color": "#6092C0",
        "doc": Object {
          "agent": Object {
            "name": "ruby",
            "version": "1.0.0",
          },
          "parent": Object {
            "id": "myTransactionId2",
          },
          "processor": Object {
            "event": "span",
          },
          "service": Object {
            "name": "opbeans-ruby",
          },
          "span": Object {
            "duration": Object {
              "us": 6161,
            },
            "id": "mySpanIdA",
            "name": "Api::ProductsController#index",
            "type": "external",
          },
          "timestamp": Object {
            "us": 1549324795824504,
          },
          "trace": Object {
            "id": "myTraceId",
          },
        },
        "docType": "span",
        "duration": 6161,
        "id": "mySpanIdA",
        "legendValues": Object {
          "serviceName": "opbeans-ruby",
          "spanType": "external",
        },
        "offset": 40498,
        "parent": Object {
          "color": "#6092C0",
          "doc": Object {
            "agent": Object {
              "name": "ruby",
              "version": "1.0.0",
            },
            "parent": Object {
              "id": "mySpanIdD",
            },
            "processor": Object {
              "event": "transaction",
            },
            "service": Object {
              "name": "opbeans-ruby",
            },
            "timestamp": Object {
              "us": 1549324795823304,
            },
            "trace": Object {
              "id": "myTraceId",
            },
            "transaction": Object {
              "duration": Object {
                "us": 8634,
              },
              "id": "myTransactionId2",
              "name": "Api::ProductsController#index",
              "type": "request",
            },
          },
          "docType": "transaction",
          "duration": 8634,
          "id": "myTransactionId2",
          "legendValues": Object {
            "serviceName": "opbeans-ruby",
            "spanType": "",
          },
          "offset": 39298,
          "parent": Object {
            "color": "#54B399",
            "doc": Object {
              "agent": Object {
                "name": "nodejs",
                "version": "1.0.0",
              },
              "parent": Object {
                "id": "myTransactionId1",
              },
              "processor": Object {
                "event": "span",
              },
              "service": Object {
                "name": "opbeans-node",
              },
              "span": Object {
                "duration": Object {
                  "us": 47557,
                },
                "id": "mySpanIdD",
                "name": "GET opbeans-ruby:3000/api/products",
                "type": "external",
              },
              "timestamp": Object {
                "us": 1549324795785760,
              },
              "trace": Object {
                "id": "myTraceId",
              },
            },
            "docType": "span",
            "duration": 47557,
            "id": "mySpanIdD",
            "legendValues": Object {
              "serviceName": "opbeans-node",
              "spanType": "external",
            },
            "offset": 1754,
            "parent": Object {
              "color": "#54B399",
              "doc": Object {
                "agent": Object {
                  "name": "nodejs",
                  "version": "1.0.0",
                },
                "processor": Object {
                  "event": "transaction",
                },
                "service": Object {
                  "name": "opbeans-node",
                },
                "timestamp": Object {
                  "us": 1549324795784006,
                },
                "trace": Object {
                  "id": "myTraceId",
                },
                "transaction": Object {
                  "duration": Object {
                    "us": 49660,
                  },
                  "id": "myTransactionId1",
                  "name": "GET /api",
                  "type": "request",
                },
              },
              "docType": "transaction",
              "duration": 49660,
              "id": "myTransactionId1",
              "legendValues": Object {
                "serviceName": "opbeans-node",
                "spanType": "",
              },
              "offset": 0,
              "parent": undefined,
              "parentId": undefined,
              "skew": 0,
              "spanLinksCount": Object {
                "linkedChildren": 0,
                "linkedParents": 0,
              },
            },
            "parentId": "myTransactionId1",
            "skew": 0,
            "spanLinksCount": Object {
              "linkedChildren": 0,
              "linkedParents": 0,
            },
          },
          "parentId": "mySpanIdD",
          "skew": 0,
          "spanLinksCount": Object {
            "linkedChildren": 0,
            "linkedParents": 0,
          },
        },
        "parentId": "myTransactionId2",
        "skew": 0,
        "spanLinksCount": Object {
          "linkedChildren": 0,
          "linkedParents": 0,
        },
      },
      "parentId": "mySpanIdA",
      "skew": 0,
      "spanLinksCount": Object {
        "linkedChildren": 0,
        "linkedParents": 0,
      },
    },
    Object {
      "color": "#6092C0",
      "doc": Object {
        "agent": Object {
          "name": "ruby",
          "version": "1.0.0",
        },
        "parent": Object {
          "id": "mySpanIdA",
        },
        "processor": Object {
          "event": "span",
        },
        "service": Object {
          "name": "opbeans-ruby",
        },
        "span": Object {
          "duration": Object {
            "us": 532,
          },
          "id": "mySpanIdC",
          "name": "SELECT FROM product",
          "type": "db",
        },
        "timestamp": Object {
          "us": 1549324795827905,
        },
        "trace": Object {
          "id": "myTraceId",
        },
      },
      "docType": "span",
      "duration": 532,
      "id": "mySpanIdC",
      "legendValues": Object {
        "serviceName": "opbeans-ruby",
        "spanType": "db",
      },
      "offset": 43899,
      "parent": Object {
        "color": "#6092C0",
        "doc": Object {
          "agent": Object {
            "name": "ruby",
            "version": "1.0.0",
          },
          "parent": Object {
            "id": "myTransactionId2",
          },
          "processor": Object {
            "event": "span",
          },
          "service": Object {
            "name": "opbeans-ruby",
          },
          "span": Object {
            "duration": Object {
              "us": 6161,
            },
            "id": "mySpanIdA",
            "name": "Api::ProductsController#index",
            "type": "external",
          },
          "timestamp": Object {
            "us": 1549324795824504,
          },
          "trace": Object {
            "id": "myTraceId",
          },
        },
        "docType": "span",
        "duration": 6161,
        "id": "mySpanIdA",
        "legendValues": Object {
          "serviceName": "opbeans-ruby",
          "spanType": "external",
        },
        "offset": 40498,
        "parent": Object {
          "color": "#6092C0",
          "doc": Object {
            "agent": Object {
              "name": "ruby",
              "version": "1.0.0",
            },
            "parent": Object {
              "id": "mySpanIdD",
            },
            "processor": Object {
              "event": "transaction",
            },
            "service": Object {
              "name": "opbeans-ruby",
            },
            "timestamp": Object {
              "us": 1549324795823304,
            },
            "trace": Object {
              "id": "myTraceId",
            },
            "transaction": Object {
              "duration": Object {
                "us": 8634,
              },
              "id": "myTransactionId2",
              "name": "Api::ProductsController#index",
              "type": "request",
            },
          },
          "docType": "transaction",
          "duration": 8634,
          "id": "myTransactionId2",
          "legendValues": Object {
            "serviceName": "opbeans-ruby",
            "spanType": "",
          },
          "offset": 39298,
          "parent": Object {
            "color": "#54B399",
            "doc": Object {
              "agent": Object {
                "name": "nodejs",
                "version": "1.0.0",
              },
              "parent": Object {
                "id": "myTransactionId1",
              },
              "processor": Object {
                "event": "span",
              },
              "service": Object {
                "name": "opbeans-node",
              },
              "span": Object {
                "duration": Object {
                  "us": 47557,
                },
                "id": "mySpanIdD",
                "name": "GET opbeans-ruby:3000/api/products",
                "type": "external",
              },
              "timestamp": Object {
                "us": 1549324795785760,
              },
              "trace": Object {
                "id": "myTraceId",
              },
            },
            "docType": "span",
            "duration": 47557,
            "id": "mySpanIdD",
            "legendValues": Object {
              "serviceName": "opbeans-node",
              "spanType": "external",
            },
            "offset": 1754,
            "parent": Object {
              "color": "#54B399",
              "doc": Object {
                "agent": Object {
                  "name": "nodejs",
                  "version": "1.0.0",
                },
                "processor": Object {
                  "event": "transaction",
                },
                "service": Object {
                  "name": "opbeans-node",
                },
                "timestamp": Object {
                  "us": 1549324795784006,
                },
                "trace": Object {
                  "id": "myTraceId",
                },
                "transaction": Object {
                  "duration": Object {
                    "us": 49660,
                  },
                  "id": "myTransactionId1",
                  "name": "GET /api",
                  "type": "request",
                },
              },
              "docType": "transaction",
              "duration": 49660,
              "id": "myTransactionId1",
              "legendValues": Object {
                "serviceName": "opbeans-node",
                "spanType": "",
              },
              "offset": 0,
              "parent": undefined,
              "parentId": undefined,
              "skew": 0,
              "spanLinksCount": Object {
                "linkedChildren": 0,
                "linkedParents": 0,
              },
            },
            "parentId": "myTransactionId1",
            "skew": 0,
            "spanLinksCount": Object {
              "linkedChildren": 0,
              "linkedParents": 0,
            },
          },
          "parentId": "mySpanIdD",
          "skew": 0,
          "spanLinksCount": Object {
            "linkedChildren": 0,
            "linkedParents": 0,
          },
        },
        "parentId": "myTransactionId2",
        "skew": 0,
        "spanLinksCount": Object {
          "linkedChildren": 0,
          "linkedParents": 0,
        },
      },
      "parentId": "mySpanIdA",
      "skew": 0,
      "spanLinksCount": Object {
        "linkedChildren": 0,
        "linkedParents": 0,
      },
    },
  ],
  "legends": Array [
    Object {
      "color": "#54B399",
      "type": "serviceName",
      "value": "opbeans-node",
    },
    Object {
      "color": "#6092C0",
      "type": "serviceName",
      "value": "opbeans-ruby",
    },
    Object {
      "color": "#54B399",
      "type": "spanType",
      "value": "",
    },
    Object {
      "color": "#6092C0",
      "type": "spanType",
      "value": "external",
    },
    Object {
      "color": "#D36086",
      "type": "spanType",
      "value": "db",
    },
  ],
  "rootWaterfallTransaction": Object {
    "color": "#54B399",
    "doc": Object {
      "agent": Object {
        "name": "nodejs",
        "version": "1.0.0",
      },
      "processor": Object {
        "event": "transaction",
      },
      "service": Object {
        "name": "opbeans-node",
      },
      "timestamp": Object {
        "us": 1549324795784006,
      },
      "trace": Object {
        "id": "myTraceId",
      },
      "transaction": Object {
        "duration": Object {
          "us": 49660,
        },
        "id": "myTransactionId1",
        "name": "GET /api",
        "type": "request",
      },
    },
    "docType": "transaction",
    "duration": 49660,
    "id": "myTransactionId1",
    "legendValues": Object {
      "serviceName": "opbeans-node",
      "spanType": "",
    },
    "offset": 0,
    "parent": undefined,
    "parentId": undefined,
    "skew": 0,
    "spanLinksCount": Object {
      "linkedChildren": 0,
      "linkedParents": 0,
    },
  },
  "totalErrorsCount": 1,
}
`;

exports[`waterfall_helpers getWaterfall should return partial waterfall 1`] = `
Object {
  "childrenByParentId": Object {
    "mySpanIdA": Array [
      Object {
        "color": "#D36086",
        "doc": Object {
          "agent": Object {
            "name": "ruby",
            "version": "1.0.0",
          },
          "parent": Object {
            "id": "mySpanIdA",
          },
          "processor": Object {
            "event": "span",
          },
          "service": Object {
            "name": "opbeans-ruby",
          },
          "span": Object {
            "duration": Object {
              "us": 481,
            },
            "id": "mySpanIdB",
            "name": "SELECT FROM products",
            "type": "db",
          },
          "timestamp": Object {
            "us": 1549324795825633,
          },
          "trace": Object {
            "id": "myTraceId",
          },
        },
        "docType": "span",
        "duration": 481,
        "id": "mySpanIdB",
        "legendValues": Object {
          "serviceName": "opbeans-ruby",
          "spanType": "db",
        },
        "offset": 2329,
        "parent": Object {
          "color": "#6092C0",
          "doc": Object {
            "agent": Object {
              "name": "ruby",
              "version": "1.0.0",
            },
            "parent": Object {
              "id": "myTransactionId2",
            },
            "processor": Object {
              "event": "span",
            },
            "service": Object {
              "name": "opbeans-ruby",
            },
            "span": Object {
              "duration": Object {
                "us": 6161,
              },
              "id": "mySpanIdA",
              "name": "Api::ProductsController#index",
              "type": "external",
            },
            "timestamp": Object {
              "us": 1549324795824504,
            },
            "trace": Object {
              "id": "myTraceId",
            },
          },
          "docType": "span",
          "duration": 6161,
          "id": "mySpanIdA",
          "legendValues": Object {
            "serviceName": "opbeans-ruby",
            "spanType": "external",
          },
          "offset": 1200,
          "parent": Object {
            "color": "#54B399",
            "doc": Object {
              "agent": Object {
                "name": "ruby",
                "version": "1.0.0",
              },
              "parent": Object {
                "id": "mySpanIdD",
              },
              "processor": Object {
                "event": "transaction",
              },
              "service": Object {
                "name": "opbeans-ruby",
              },
              "timestamp": Object {
                "us": 1549324795823304,
              },
              "trace": Object {
                "id": "myTraceId",
              },
              "transaction": Object {
                "duration": Object {
                  "us": 8634,
                },
                "id": "myTransactionId2",
                "name": "Api::ProductsController#index",
                "type": "request",
              },
            },
            "docType": "transaction",
            "duration": 8634,
            "id": "myTransactionId2",
            "legendValues": Object {
              "serviceName": "opbeans-ruby",
              "spanType": "",
            },
            "offset": 0,
            "parent": undefined,
            "parentId": "mySpanIdD",
            "skew": 0,
            "spanLinksCount": Object {
              "linkedChildren": 0,
              "linkedParents": 0,
            },
          },
          "parentId": "myTransactionId2",
          "skew": 0,
          "spanLinksCount": Object {
            "linkedChildren": 0,
            "linkedParents": 0,
          },
        },
        "parentId": "mySpanIdA",
        "skew": 0,
        "spanLinksCount": Object {
          "linkedChildren": 0,
          "linkedParents": 0,
        },
      },
      Object {
        "color": "#D36086",
        "doc": Object {
          "agent": Object {
            "name": "ruby",
            "version": "1.0.0",
          },
          "parent": Object {
            "id": "mySpanIdA",
          },
          "processor": Object {
            "event": "span",
          },
          "service": Object {
            "name": "opbeans-ruby",
          },
          "span": Object {
            "duration": Object {
              "us": 532,
            },
            "id": "mySpanIdC",
            "name": "SELECT FROM product",
            "type": "db",
          },
          "timestamp": Object {
            "us": 1549324795827905,
          },
          "trace": Object {
            "id": "myTraceId",
          },
        },
        "docType": "span",
        "duration": 532,
        "id": "mySpanIdC",
        "legendValues": Object {
          "serviceName": "opbeans-ruby",
          "spanType": "db",
        },
        "offset": 4601,
        "parent": Object {
          "color": "#6092C0",
          "doc": Object {
            "agent": Object {
              "name": "ruby",
              "version": "1.0.0",
            },
            "parent": Object {
              "id": "myTransactionId2",
            },
            "processor": Object {
              "event": "span",
            },
            "service": Object {
              "name": "opbeans-ruby",
            },
            "span": Object {
              "duration": Object {
                "us": 6161,
              },
              "id": "mySpanIdA",
              "name": "Api::ProductsController#index",
              "type": "external",
            },
            "timestamp": Object {
              "us": 1549324795824504,
            },
            "trace": Object {
              "id": "myTraceId",
            },
          },
          "docType": "span",
          "duration": 6161,
          "id": "mySpanIdA",
          "legendValues": Object {
            "serviceName": "opbeans-ruby",
            "spanType": "external",
          },
          "offset": 1200,
          "parent": Object {
            "color": "#54B399",
            "doc": Object {
              "agent": Object {
                "name": "ruby",
                "version": "1.0.0",
              },
              "parent": Object {
                "id": "mySpanIdD",
              },
              "processor": Object {
                "event": "transaction",
              },
              "service": Object {
                "name": "opbeans-ruby",
              },
              "timestamp": Object {
                "us": 1549324795823304,
              },
              "trace": Object {
                "id": "myTraceId",
              },
              "transaction": Object {
                "duration": Object {
                  "us": 8634,
                },
                "id": "myTransactionId2",
                "name": "Api::ProductsController#index",
                "type": "request",
              },
            },
            "docType": "transaction",
            "duration": 8634,
            "id": "myTransactionId2",
            "legendValues": Object {
              "serviceName": "opbeans-ruby",
              "spanType": "",
            },
            "offset": 0,
            "parent": undefined,
            "parentId": "mySpanIdD",
            "skew": 0,
            "spanLinksCount": Object {
              "linkedChildren": 0,
              "linkedParents": 0,
            },
          },
          "parentId": "myTransactionId2",
          "skew": 0,
          "spanLinksCount": Object {
            "linkedChildren": 0,
            "linkedParents": 0,
          },
        },
        "parentId": "mySpanIdA",
        "skew": 0,
        "spanLinksCount": Object {
          "linkedChildren": 0,
          "linkedParents": 0,
        },
      },
    ],
    "mySpanIdD": Array [
      Object {
        "color": "#54B399",
        "doc": Object {
          "agent": Object {
            "name": "ruby",
            "version": "1.0.0",
          },
          "parent": Object {
            "id": "mySpanIdD",
          },
          "processor": Object {
            "event": "transaction",
          },
          "service": Object {
            "name": "opbeans-ruby",
          },
          "timestamp": Object {
            "us": 1549324795823304,
          },
          "trace": Object {
            "id": "myTraceId",
          },
          "transaction": Object {
            "duration": Object {
              "us": 8634,
            },
            "id": "myTransactionId2",
            "name": "Api::ProductsController#index",
            "type": "request",
          },
        },
        "docType": "transaction",
        "duration": 8634,
        "id": "myTransactionId2",
        "legendValues": Object {
          "serviceName": "opbeans-ruby",
          "spanType": "",
        },
        "offset": 0,
        "parent": undefined,
        "parentId": "mySpanIdD",
        "skew": 0,
        "spanLinksCount": Object {
          "linkedChildren": 0,
          "linkedParents": 0,
        },
      },
    ],
    "myTransactionId2": Array [
      Object {
        "color": "#6092C0",
        "doc": Object {
          "agent": Object {
            "name": "ruby",
            "version": "1.0.0",
          },
          "parent": Object {
            "id": "myTransactionId2",
          },
          "processor": Object {
            "event": "span",
          },
          "service": Object {
            "name": "opbeans-ruby",
          },
          "span": Object {
            "duration": Object {
              "us": 6161,
            },
            "id": "mySpanIdA",
            "name": "Api::ProductsController#index",
            "type": "external",
          },
          "timestamp": Object {
            "us": 1549324795824504,
          },
          "trace": Object {
            "id": "myTraceId",
          },
        },
        "docType": "span",
        "duration": 6161,
        "id": "mySpanIdA",
        "legendValues": Object {
          "serviceName": "opbeans-ruby",
          "spanType": "external",
        },
        "offset": 1200,
        "parent": Object {
          "color": "#54B399",
          "doc": Object {
            "agent": Object {
              "name": "ruby",
              "version": "1.0.0",
            },
            "parent": Object {
              "id": "mySpanIdD",
            },
            "processor": Object {
              "event": "transaction",
            },
            "service": Object {
              "name": "opbeans-ruby",
            },
            "timestamp": Object {
              "us": 1549324795823304,
            },
            "trace": Object {
              "id": "myTraceId",
            },
            "transaction": Object {
              "duration": Object {
                "us": 8634,
              },
              "id": "myTransactionId2",
              "name": "Api::ProductsController#index",
              "type": "request",
            },
          },
          "docType": "transaction",
          "duration": 8634,
          "id": "myTransactionId2",
          "legendValues": Object {
            "serviceName": "opbeans-ruby",
            "spanType": "",
          },
          "offset": 0,
          "parent": undefined,
          "parentId": "mySpanIdD",
          "skew": 0,
          "spanLinksCount": Object {
            "linkedChildren": 0,
            "linkedParents": 0,
          },
        },
        "parentId": "myTransactionId2",
        "skew": 0,
        "spanLinksCount": Object {
          "linkedChildren": 0,
          "linkedParents": 0,
        },
      },
    ],
  },
  "duration": 8634,
  "entryTransaction": Object {
    "agent": Object {
      "name": "ruby",
      "version": "1.0.0",
    },
    "parent": Object {
      "id": "mySpanIdD",
    },
    "processor": Object {
      "event": "transaction",
    },
    "service": Object {
      "name": "opbeans-ruby",
    },
    "timestamp": Object {
      "us": 1549324795823304,
    },
    "trace": Object {
      "id": "myTraceId",
    },
    "transaction": Object {
      "duration": Object {
        "us": 8634,
      },
      "id": "myTransactionId2",
      "name": "Api::ProductsController#index",
      "type": "request",
    },
  },
  "entryWaterfallTransaction": Object {
    "color": "#54B399",
    "doc": Object {
      "agent": Object {
        "name": "ruby",
        "version": "1.0.0",
      },
      "parent": Object {
        "id": "mySpanIdD",
      },
      "processor": Object {
        "event": "transaction",
      },
      "service": Object {
        "name": "opbeans-ruby",
      },
      "timestamp": Object {
        "us": 1549324795823304,
      },
      "trace": Object {
        "id": "myTraceId",
      },
      "transaction": Object {
        "duration": Object {
          "us": 8634,
        },
        "id": "myTransactionId2",
        "name": "Api::ProductsController#index",
        "type": "request",
      },
    },
    "docType": "transaction",
    "duration": 8634,
    "id": "myTransactionId2",
    "legendValues": Object {
      "serviceName": "opbeans-ruby",
      "spanType": "",
    },
    "offset": 0,
    "parent": undefined,
    "parentId": "mySpanIdD",
    "skew": 0,
    "spanLinksCount": Object {
      "linkedChildren": 0,
      "linkedParents": 0,
    },
  },
  "errorCountById": Object {
    "myTransactionId1": 1,
  },
  "errorItems": Array [],
  "exceedsMax": false,
  "items": Array [
    Object {
      "color": "#54B399",
      "doc": Object {
        "agent": Object {
          "name": "ruby",
          "version": "1.0.0",
        },
        "parent": Object {
          "id": "mySpanIdD",
        },
        "processor": Object {
          "event": "transaction",
        },
        "service": Object {
          "name": "opbeans-ruby",
        },
        "timestamp": Object {
          "us": 1549324795823304,
        },
        "trace": Object {
          "id": "myTraceId",
        },
        "transaction": Object {
          "duration": Object {
            "us": 8634,
          },
          "id": "myTransactionId2",
          "name": "Api::ProductsController#index",
          "type": "request",
        },
      },
      "docType": "transaction",
      "duration": 8634,
      "id": "myTransactionId2",
      "legendValues": Object {
        "serviceName": "opbeans-ruby",
        "spanType": "",
      },
      "offset": 0,
      "parent": undefined,
      "parentId": "mySpanIdD",
      "skew": 0,
      "spanLinksCount": Object {
        "linkedChildren": 0,
        "linkedParents": 0,
      },
    },
    Object {
      "color": "#6092C0",
      "doc": Object {
        "agent": Object {
          "name": "ruby",
          "version": "1.0.0",
        },
        "parent": Object {
          "id": "myTransactionId2",
        },
        "processor": Object {
          "event": "span",
        },
        "service": Object {
          "name": "opbeans-ruby",
        },
        "span": Object {
          "duration": Object {
            "us": 6161,
          },
          "id": "mySpanIdA",
          "name": "Api::ProductsController#index",
          "type": "external",
        },
        "timestamp": Object {
          "us": 1549324795824504,
        },
        "trace": Object {
          "id": "myTraceId",
        },
      },
      "docType": "span",
      "duration": 6161,
      "id": "mySpanIdA",
      "legendValues": Object {
        "serviceName": "opbeans-ruby",
        "spanType": "external",
      },
      "offset": 1200,
      "parent": Object {
        "color": "#54B399",
        "doc": Object {
          "agent": Object {
            "name": "ruby",
            "version": "1.0.0",
          },
          "parent": Object {
            "id": "mySpanIdD",
          },
          "processor": Object {
            "event": "transaction",
          },
          "service": Object {
            "name": "opbeans-ruby",
          },
          "timestamp": Object {
            "us": 1549324795823304,
          },
          "trace": Object {
            "id": "myTraceId",
          },
          "transaction": Object {
            "duration": Object {
              "us": 8634,
            },
            "id": "myTransactionId2",
            "name": "Api::ProductsController#index",
            "type": "request",
          },
        },
        "docType": "transaction",
        "duration": 8634,
        "id": "myTransactionId2",
        "legendValues": Object {
          "serviceName": "opbeans-ruby",
          "spanType": "",
        },
        "offset": 0,
        "parent": undefined,
        "parentId": "mySpanIdD",
        "skew": 0,
        "spanLinksCount": Object {
          "linkedChildren": 0,
          "linkedParents": 0,
        },
      },
      "parentId": "myTransactionId2",
      "skew": 0,
      "spanLinksCount": Object {
        "linkedChildren": 0,
        "linkedParents": 0,
      },
    },
    Object {
      "color": "#D36086",
      "doc": Object {
        "agent": Object {
          "name": "ruby",
          "version": "1.0.0",
        },
        "parent": Object {
          "id": "mySpanIdA",
        },
        "processor": Object {
          "event": "span",
        },
        "service": Object {
          "name": "opbeans-ruby",
        },
        "span": Object {
          "duration": Object {
            "us": 481,
          },
          "id": "mySpanIdB",
          "name": "SELECT FROM products",
          "type": "db",
        },
        "timestamp": Object {
          "us": 1549324795825633,
        },
        "trace": Object {
          "id": "myTraceId",
        },
      },
      "docType": "span",
      "duration": 481,
      "id": "mySpanIdB",
      "legendValues": Object {
        "serviceName": "opbeans-ruby",
        "spanType": "db",
      },
      "offset": 2329,
      "parent": Object {
        "color": "#6092C0",
        "doc": Object {
          "agent": Object {
            "name": "ruby",
            "version": "1.0.0",
          },
          "parent": Object {
            "id": "myTransactionId2",
          },
          "processor": Object {
            "event": "span",
          },
          "service": Object {
            "name": "opbeans-ruby",
          },
          "span": Object {
            "duration": Object {
              "us": 6161,
            },
            "id": "mySpanIdA",
            "name": "Api::ProductsController#index",
            "type": "external",
          },
          "timestamp": Object {
            "us": 1549324795824504,
          },
          "trace": Object {
            "id": "myTraceId",
          },
        },
        "docType": "span",
        "duration": 6161,
        "id": "mySpanIdA",
        "legendValues": Object {
          "serviceName": "opbeans-ruby",
          "spanType": "external",
        },
        "offset": 1200,
        "parent": Object {
          "color": "#54B399",
          "doc": Object {
            "agent": Object {
              "name": "ruby",
              "version": "1.0.0",
            },
            "parent": Object {
              "id": "mySpanIdD",
            },
            "processor": Object {
              "event": "transaction",
            },
            "service": Object {
              "name": "opbeans-ruby",
            },
            "timestamp": Object {
              "us": 1549324795823304,
            },
            "trace": Object {
              "id": "myTraceId",
            },
            "transaction": Object {
              "duration": Object {
                "us": 8634,
              },
              "id": "myTransactionId2",
              "name": "Api::ProductsController#index",
              "type": "request",
            },
          },
          "docType": "transaction",
          "duration": 8634,
          "id": "myTransactionId2",
          "legendValues": Object {
            "serviceName": "opbeans-ruby",
            "spanType": "",
          },
          "offset": 0,
          "parent": undefined,
          "parentId": "mySpanIdD",
          "skew": 0,
          "spanLinksCount": Object {
            "linkedChildren": 0,
            "linkedParents": 0,
          },
        },
        "parentId": "myTransactionId2",
        "skew": 0,
        "spanLinksCount": Object {
          "linkedChildren": 0,
          "linkedParents": 0,
        },
      },
      "parentId": "mySpanIdA",
      "skew": 0,
      "spanLinksCount": Object {
        "linkedChildren": 0,
        "linkedParents": 0,
      },
    },
    Object {
      "color": "#D36086",
      "doc": Object {
        "agent": Object {
          "name": "ruby",
          "version": "1.0.0",
        },
        "parent": Object {
          "id": "mySpanIdA",
        },
        "processor": Object {
          "event": "span",
        },
        "service": Object {
          "name": "opbeans-ruby",
        },
        "span": Object {
          "duration": Object {
            "us": 532,
          },
          "id": "mySpanIdC",
          "name": "SELECT FROM product",
          "type": "db",
        },
        "timestamp": Object {
          "us": 1549324795827905,
        },
        "trace": Object {
          "id": "myTraceId",
        },
      },
      "docType": "span",
      "duration": 532,
      "id": "mySpanIdC",
      "legendValues": Object {
        "serviceName": "opbeans-ruby",
        "spanType": "db",
      },
      "offset": 4601,
      "parent": Object {
        "color": "#6092C0",
        "doc": Object {
          "agent": Object {
            "name": "ruby",
            "version": "1.0.0",
          },
          "parent": Object {
            "id": "myTransactionId2",
          },
          "processor": Object {
            "event": "span",
          },
          "service": Object {
            "name": "opbeans-ruby",
          },
          "span": Object {
            "duration": Object {
              "us": 6161,
            },
            "id": "mySpanIdA",
            "name": "Api::ProductsController#index",
            "type": "external",
          },
          "timestamp": Object {
            "us": 1549324795824504,
          },
          "trace": Object {
            "id": "myTraceId",
          },
        },
        "docType": "span",
        "duration": 6161,
        "id": "mySpanIdA",
        "legendValues": Object {
          "serviceName": "opbeans-ruby",
          "spanType": "external",
        },
        "offset": 1200,
        "parent": Object {
          "color": "#54B399",
          "doc": Object {
            "agent": Object {
              "name": "ruby",
              "version": "1.0.0",
            },
            "parent": Object {
              "id": "mySpanIdD",
            },
            "processor": Object {
              "event": "transaction",
            },
            "service": Object {
              "name": "opbeans-ruby",
            },
            "timestamp": Object {
              "us": 1549324795823304,
            },
            "trace": Object {
              "id": "myTraceId",
            },
            "transaction": Object {
              "duration": Object {
                "us": 8634,
              },
              "id": "myTransactionId2",
              "name": "Api::ProductsController#index",
              "type": "request",
            },
          },
          "docType": "transaction",
          "duration": 8634,
          "id": "myTransactionId2",
          "legendValues": Object {
            "serviceName": "opbeans-ruby",
            "spanType": "",
          },
          "offset": 0,
          "parent": undefined,
          "parentId": "mySpanIdD",
          "skew": 0,
          "spanLinksCount": Object {
            "linkedChildren": 0,
            "linkedParents": 0,
          },
        },
        "parentId": "myTransactionId2",
        "skew": 0,
        "spanLinksCount": Object {
          "linkedChildren": 0,
          "linkedParents": 0,
        },
      },
      "parentId": "mySpanIdA",
      "skew": 0,
      "spanLinksCount": Object {
        "linkedChildren": 0,
        "linkedParents": 0,
      },
    },
  ],
  "legends": Array [
    Object {
      "color": "#54B399",
      "type": "serviceName",
      "value": "opbeans-ruby",
    },
    Object {
      "color": "#54B399",
      "type": "spanType",
      "value": "",
    },
    Object {
      "color": "#6092C0",
      "type": "spanType",
      "value": "external",
    },
    Object {
      "color": "#D36086",
      "type": "spanType",
      "value": "db",
    },
  ],
  "rootWaterfallTransaction": Object {
    "color": "",
    "doc": Object {
      "agent": Object {
        "name": "nodejs",
        "version": "1.0.0",
      },
      "processor": Object {
        "event": "transaction",
      },
      "service": Object {
        "name": "opbeans-node",
      },
      "timestamp": Object {
        "us": 1549324795784006,
      },
      "trace": Object {
        "id": "myTraceId",
      },
      "transaction": Object {
        "duration": Object {
          "us": 49660,
        },
        "id": "myTransactionId1",
        "name": "GET /api",
        "type": "request",
      },
    },
    "docType": "transaction",
    "duration": 49660,
    "id": "myTransactionId1",
    "legendValues": Object {
      "serviceName": "opbeans-node",
      "spanType": "",
    },
    "offset": 0,
    "parentId": undefined,
    "skew": 0,
    "spanLinksCount": Object {
      "linkedChildren": 0,
      "linkedParents": 0,
    },
  },
  "totalErrorsCount": 1,
}
`;

exports[`waterfall_helpers getWaterfallItems should handle cyclic references 1`] = `
Array [
  Object {
    "doc": Object {
      "timestamp": Object {
        "us": 10,
      },
      "transaction": Object {
        "id": "a",
      },
    },
    "docType": "transaction",
    "id": "a",
    "offset": 0,
    "parent": undefined,
    "skew": 0,
  },
  Object {
    "doc": Object {
      "parent": Object {
        "id": "a",
      },
      "span": Object {
        "id": "b",
      },
      "timestamp": Object {
        "us": 20,
      },
    },
    "docType": "span",
    "id": "b",
    "offset": 10,
    "parent": Object {
      "doc": Object {
        "timestamp": Object {
          "us": 10,
        },
        "transaction": Object {
          "id": "a",
        },
      },
      "docType": "transaction",
      "id": "a",
      "offset": 0,
      "parent": undefined,
      "skew": 0,
    },
    "parentId": "a",
    "skew": 0,
  },
]
`;

exports[`waterfall_helpers getWaterfallItems should order items correctly 1`] = `
Array [
  Object {
    "color": "",
    "doc": Object {
      "agent": Object {
        "name": "java",
        "version": "1.0.0",
      },
      "processor": Object {
        "event": "transaction",
      },
      "service": Object {
        "name": "opbeans-java",
      },
      "timestamp": Object {
        "us": 1536763736366000,
      },
      "trace": Object {
        "id": "1",
      },
      "transaction": Object {
        "duration": Object {
          "us": 47557,
        },
        "id": "a",
        "name": "APIRestController#products",
        "type": "request",
      },
    },
    "docType": "transaction",
    "duration": 9480,
    "id": "a",
    "legendValues": Object {
      "serviceName": "opbeans-java",
      "spanType": "",
    },
    "offset": 0,
    "parent": undefined,
    "skew": 0,
    "spanLinksCount": Object {
      "linkedChildren": 0,
      "linkedParents": 0,
    },
  },
  Object {
    "color": "",
    "doc": Object {
      "agent": Object {
        "name": "java",
        "version": "1.0.0",
      },
      "parent": Object {
        "id": "a",
      },
      "processor": Object {
        "event": "span",
      },
      "service": Object {
        "name": "opbeans-java",
      },
      "span": Object {
        "duration": Object {
          "us": 47557,
        },
        "id": "b2",
        "name": "GET [0:0:0:0:0:0:0:1]",
        "type": "external",
      },
      "timestamp": Object {
        "us": 1536763736367000,
      },
      "trace": Object {
        "id": "1",
      },
    },
    "docType": "span",
    "duration": 4694,
    "id": "b2",
    "legendValues": Object {
      "serviceName": "opbeans-java",
      "spanType": "",
    },
    "offset": 1000,
    "parent": Object {
      "color": "",
      "doc": Object {
        "agent": Object {
          "name": "java",
          "version": "1.0.0",
        },
        "processor": Object {
          "event": "transaction",
        },
        "service": Object {
          "name": "opbeans-java",
        },
        "timestamp": Object {
          "us": 1536763736366000,
        },
        "trace": Object {
          "id": "1",
        },
        "transaction": Object {
          "duration": Object {
            "us": 47557,
          },
          "id": "a",
          "name": "APIRestController#products",
          "type": "request",
        },
      },
      "docType": "transaction",
      "duration": 9480,
      "id": "a",
      "legendValues": Object {
        "serviceName": "opbeans-java",
        "spanType": "",
      },
      "offset": 0,
      "parent": undefined,
      "skew": 0,
      "spanLinksCount": Object {
        "linkedChildren": 0,
        "linkedParents": 0,
      },
    },
    "parentId": "a",
    "skew": 0,
    "spanLinksCount": Object {
      "linkedChildren": 0,
      "linkedParents": 0,
    },
  },
  Object {
    "color": "",
    "doc": Object {
      "agent": Object {
        "name": "java",
        "version": "1.0.0",
      },
      "parent": Object {
        "id": "a",
      },
      "processor": Object {
        "event": "span",
      },
      "service": Object {
        "name": "opbeans-java",
      },
      "span": Object {
        "duration": Object {
          "us": 47557,
        },
        "id": "b",
        "name": "GET [0:0:0:0:0:0:0:1]",
        "type": "external",
      },
      "timestamp": Object {
        "us": 1536763736368000,
      },
      "trace": Object {
        "id": "1",
      },
    },
    "docType": "span",
    "duration": 4694,
    "id": "b",
    "legendValues": Object {
      "serviceName": "opbeans-java",
      "spanType": "",
    },
    "offset": 2000,
    "parent": Object {
      "color": "",
      "doc": Object {
        "agent": Object {
          "name": "java",
          "version": "1.0.0",
        },
        "processor": Object {
          "event": "transaction",
        },
        "service": Object {
          "name": "opbeans-java",
        },
        "timestamp": Object {
          "us": 1536763736366000,
        },
        "trace": Object {
          "id": "1",
        },
        "transaction": Object {
          "duration": Object {
            "us": 47557,
          },
          "id": "a",
          "name": "APIRestController#products",
          "type": "request",
        },
      },
      "docType": "transaction",
      "duration": 9480,
      "id": "a",
      "legendValues": Object {
        "serviceName": "opbeans-java",
        "spanType": "",
      },
      "offset": 0,
      "parent": undefined,
      "skew": 0,
      "spanLinksCount": Object {
        "linkedChildren": 0,
        "linkedParents": 0,
      },
    },
    "parentId": "a",
    "skew": 0,
    "spanLinksCount": Object {
      "linkedChildren": 0,
      "linkedParents": 0,
    },
  },
  Object {
    "color": "",
    "doc": Object {
      "agent": Object {
        "name": "java",
        "version": "1.0.0",
      },
      "parent": Object {
        "id": "b",
      },
      "processor": Object {
        "event": "transaction",
      },
      "service": Object {
        "name": "opbeans-java",
      },
      "timestamp": Object {
        "us": 1536763736369000,
      },
      "trace": Object {
        "id": "1",
      },
      "transaction": Object {
        "duration": Object {
          "us": 47557,
        },
        "id": "c",
        "name": "APIRestController#productsRemote",
        "type": "request",
      },
    },
    "docType": "transaction",
    "duration": 3581,
    "id": "c",
    "legendValues": Object {
      "serviceName": "opbeans-java",
      "spanType": "",
    },
    "offset": 3000,
    "parent": Object {
      "color": "",
      "doc": Object {
        "agent": Object {
          "name": "java",
          "version": "1.0.0",
        },
        "parent": Object {
          "id": "a",
        },
        "processor": Object {
          "event": "span",
        },
        "service": Object {
          "name": "opbeans-java",
        },
        "span": Object {
          "duration": Object {
            "us": 47557,
          },
          "id": "b",
          "name": "GET [0:0:0:0:0:0:0:1]",
          "type": "external",
        },
        "timestamp": Object {
          "us": 1536763736368000,
        },
        "trace": Object {
          "id": "1",
        },
      },
      "docType": "span",
      "duration": 4694,
      "id": "b",
      "legendValues": Object {
        "serviceName": "opbeans-java",
        "spanType": "",
      },
      "offset": 2000,
      "parent": Object {
        "color": "",
        "doc": Object {
          "agent": Object {
            "name": "java",
            "version": "1.0.0",
          },
          "processor": Object {
            "event": "transaction",
          },
          "service": Object {
            "name": "opbeans-java",
          },
          "timestamp": Object {
            "us": 1536763736366000,
          },
          "trace": Object {
            "id": "1",
          },
          "transaction": Object {
            "duration": Object {
              "us": 47557,
            },
            "id": "a",
            "name": "APIRestController#products",
            "type": "request",
          },
        },
        "docType": "transaction",
        "duration": 9480,
        "id": "a",
        "legendValues": Object {
          "serviceName": "opbeans-java",
          "spanType": "",
        },
        "offset": 0,
        "parent": undefined,
        "skew": 0,
        "spanLinksCount": Object {
          "linkedChildren": 0,
          "linkedParents": 0,
        },
      },
      "parentId": "a",
      "skew": 0,
      "spanLinksCount": Object {
        "linkedChildren": 0,
        "linkedParents": 0,
      },
    },
    "parentId": "b",
    "skew": 0,
    "spanLinksCount": Object {
      "linkedChildren": 0,
      "linkedParents": 0,
    },
  },
  Object {
    "color": "",
    "doc": Object {
      "agent": Object {
        "name": "java",
        "version": "1.0.0",
      },
      "parent": Object {
        "id": "c",
      },
      "processor": Object {
        "event": "span",
      },
      "service": Object {
        "name": "opbeans-java",
      },
      "span": Object {
        "duration": Object {
          "us": 47557,
        },
        "id": "d",
        "name": "SELECT",
        "type": "db",
      },
      "timestamp": Object {
        "us": 1536763736371000,
      },
      "trace": Object {
        "id": "1",
      },
    },
    "docType": "span",
    "duration": 210,
    "id": "d",
    "legendValues": Object {
      "serviceName": "opbeans-java",
      "spanType": "",
    },
    "offset": 5000,
    "parent": Object {
      "color": "",
      "doc": Object {
        "agent": Object {
          "name": "java",
          "version": "1.0.0",
        },
        "parent": Object {
          "id": "b",
        },
        "processor": Object {
          "event": "transaction",
        },
        "service": Object {
          "name": "opbeans-java",
        },
        "timestamp": Object {
          "us": 1536763736369000,
        },
        "trace": Object {
          "id": "1",
        },
        "transaction": Object {
          "duration": Object {
            "us": 47557,
          },
          "id": "c",
          "name": "APIRestController#productsRemote",
          "type": "request",
        },
      },
      "docType": "transaction",
      "duration": 3581,
      "id": "c",
      "legendValues": Object {
        "serviceName": "opbeans-java",
        "spanType": "",
      },
      "offset": 3000,
      "parent": Object {
        "color": "",
        "doc": Object {
          "agent": Object {
            "name": "java",
            "version": "1.0.0",
          },
          "parent": Object {
            "id": "a",
          },
          "processor": Object {
            "event": "span",
          },
          "service": Object {
            "name": "opbeans-java",
          },
          "span": Object {
            "duration": Object {
              "us": 47557,
            },
            "id": "b",
            "name": "GET [0:0:0:0:0:0:0:1]",
            "type": "external",
          },
          "timestamp": Object {
            "us": 1536763736368000,
          },
          "trace": Object {
            "id": "1",
          },
        },
        "docType": "span",
        "duration": 4694,
        "id": "b",
        "legendValues": Object {
          "serviceName": "opbeans-java",
          "spanType": "",
        },
        "offset": 2000,
        "parent": Object {
          "color": "",
          "doc": Object {
            "agent": Object {
              "name": "java",
              "version": "1.0.0",
            },
            "processor": Object {
              "event": "transaction",
            },
            "service": Object {
              "name": "opbeans-java",
            },
            "timestamp": Object {
              "us": 1536763736366000,
            },
            "trace": Object {
              "id": "1",
            },
            "transaction": Object {
              "duration": Object {
                "us": 47557,
              },
              "id": "a",
              "name": "APIRestController#products",
              "type": "request",
            },
          },
          "docType": "transaction",
          "duration": 9480,
          "id": "a",
          "legendValues": Object {
            "serviceName": "opbeans-java",
            "spanType": "",
          },
          "offset": 0,
          "parent": undefined,
          "skew": 0,
          "spanLinksCount": Object {
            "linkedChildren": 0,
            "linkedParents": 0,
          },
        },
        "parentId": "a",
        "skew": 0,
        "spanLinksCount": Object {
          "linkedChildren": 0,
          "linkedParents": 0,
        },
      },
      "parentId": "b",
      "skew": 0,
      "spanLinksCount": Object {
        "linkedChildren": 0,
        "linkedParents": 0,
      },
    },
    "parentId": "c",
    "skew": 0,
    "spanLinksCount": Object {
      "linkedChildren": 0,
      "linkedParents": 0,
    },
  },
]
`;
